xml/src2/objects/Subscriber__c.object
<CustomObject>
    <description>Subscribers to the Subscription object</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact that will receive this subscription.</description>
        <inlineHelpText>The contact that will receive this subscription.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Subscribers</relationshipLabel>
        <relationshipName>Subscribers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>The name of the subscriber.</description>
        <formula>IF(NOT(ISBLANK( Contact__c)),   HYPERLINK(&apos;/&apos; + Contact__r.Id, Contact__r.FirstName + &apos; &apos; +  Contact__r.LastName, &apos;_blank&apos;) , 
 IF(NOT(ISBLANK( Organization__c )),   HYPERLINK(&apos;/&apos; + Organization__r.Id, Organization__r.Name, &apos;_blank&apos;) ,  
  IF(NOT(ISBLANK(Position__c)),   HYPERLINK(&apos;/&apos; + Position__r.Id, TEXT( Position__r.Position_Title__c ), &apos;_blank&apos;)  , &apos;N/A&apos;) ) )</formula>
        <inlineHelpText>The name of the subscriber.</inlineHelpText>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Reason__c</fullName>
        <description>The reason why a subscriber is being opt out of this subscription.</description>
        <inlineHelpText>The reason why a subscriber is being opt out of this subscription.</inlineHelpText>
        <label>Opt Out Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The organization that will receive this subscription.</description>
        <inlineHelpText>The organization that will receive this subscription.</inlineHelpText>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscribers</relationshipLabel>
        <relationshipName>Subscribers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The position that will receive this subscription.</description>
        <inlineHelpText>The position that will receive this subscription.</inlineHelpText>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Subscribers</relationshipLabel>
        <relationshipName>Subscribers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>The number of subscriptions this subscriber would like to receive.</inlineHelpText>
        <label>Quantity</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SortName__c</fullName>
        <formula>IF( ISBLANK( Organization__c ), IF(ISBLANK(Contact__c), IF(ISBLANK(Position__c), &apos;No Name Found&apos;,  TEXT(Position__r.Position_Title__c) ) ,  Contact__r.FirstName + Contact__r.LastName), Organization__r.Name)</formula>
        <label>SortName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Opt In</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Opt Out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sticky__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If a subscriber is added manually opposed to being added from a report.</description>
        <inlineHelpText>If a subscriber is added manually opposed to being added from a report.</inlineHelpText>
        <label>Sticky</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Subscribers</relationshipLabel>
        <relationshipName>Subscribers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Subscriber</label>
    <nameField>
        <displayFormat>Subscriber-{00000000}</displayFormat>
        <label>Subscriber Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscribers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>must_have_a_subscriber</fullName>
        <active>true</active>
        <description>A contact, organization, or position record is required.</description>
        <errorConditionFormula>ISBLANK(  Contact__c  )  &amp;&amp; ISBLANK( Organization__c) &amp;&amp; ISBLANK( Position__c)</errorConditionFormula>
        <errorMessage>Must have a subscriber.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>must_only_have_one_subscriber</fullName>
        <active>true</active>
        <description>Cannot have more than one subscriber.</description>
        <errorConditionFormula>(NOT(ISBLANK(Contact__c)) &amp;&amp; NOT(ISBLANK(Organization__c)) &amp;&amp; ISBLANK(Position__c)) ||
(NOT(ISBLANK(Contact__c)) &amp;&amp; ISBLANK(Organization__c) &amp;&amp; NOT(ISBLANK(Position__c))) ||
(ISBLANK(Contact__c) &amp;&amp; NOT(ISBLANK(Organization__c)) &amp;&amp; NOT(ISBLANK(Position__c)))</errorConditionFormula>
        <errorMessage>Cannot have more than one subscriber.</errorMessage>
    </validationRules>
</CustomObject>